# OPT_IC

./: .gitignore  Abstract_optimization.cpp  Abstract_optimization.hpp  Application.cpp  Application.hpp  CMakeLists.txt  ConfigApp.csv  ConfigApp_Andrey.txt  Create_application.cpp  Create_application.hpp  Create_object.cpp  Create_object.hpp  Fast_bisection_optimization.cpp  Fast_bisection_optimization.hpp  Fast_optimization.cpp  Fast_optimization.hpp  Helper.cpp  Helper.hpp  InfrastructureConfiguration.cpp  InfrastructureConfiguration.hpp  Job.cpp  Job.hpp  MachineLearningModel.cpp  MachineLearningModel.hpp  Makefile  README.txt  Stage.cpp  Stage.hpp  Time_meas.cpp  Time_meas.hpp  app.txt  app_1 3.txt  app_1.txt  app_1.txt.old  app_1.txt.templatee  app_2.txt  app_2.txt.template  app_3.txt  app_3.txte  app_4.txt  (+41 more)
Dagsim/: .gitignore  dagSim.c  dagsim.sh  luaInterface.c  myout  rnd.c  test1_originale.lua
data/: ConfigApp_1.txt  ConfigApp_A.txt  ConfigApp_A2.txt  ConfigApp_Andrey.txt  ConfigApp_D.txt  ConfigApp_D2.txt  ConfigApp_DQ.txt  ConfigApp_P8.txt  ConfigApp_P82.txt  app_1.csv  app_2.csv  app_3.csv  app_4.csv  app_A.csv  app_A2.csv  app_Andrey.csv  app_D.csv  app_D2.csv  app_DQ.csv  app_P8.csv  app_P82.csv  jobs_1.csv  jobs_2.csv  jobs_3.csv  jobs_4.csv  jobs_A.csv  jobs_A2.csv  jobs_Andrey.csv  jobs_D.csv  jobs_D2.csv  jobs_DQ.csv  jobs_P8.csv  jobs_P82.csv  stages_1.csv  stages_2.csv  stages_3.csv  stages_4.csv  stages_A.csv  stages_A2.csv  stages_Andrey.csv  (+17 more)
doc/: VescoviniZaninelli.graffle
lua/: test1.lua  test1_mod.lua  test2.lua  test2_mod.lua  test3.lua  (+19 more)
(+203 files in other folders)
